---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 8888
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  c3_: int = const 2;
  c4_: int = const 1;
  c5_: int = const 3;
  v6_: int = id c2_;
  v7_: int = id v0;
  v8_: int = id c3_;
  v9_: int = id c4_;
  v10_: int = id c5_;
  v11_: int = id c2_;
.b12_:
  v13_: bool = eq v7_ v9_;
  v14_: int = id v6_;
  v15_: int = id v7_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
  v19_: int = id v11_;
  br v13_ .b20_ .b21_;
.b21_:
  v22_: int = add v6_ v9_;
  v23_: int = div v7_ v8_;
  v24_: int = mul v23_ v8_;
  v25_: int = sub v7_ v24_;
  v26_: bool = eq v11_ v25_;
<<<<<<< HEAD
  v27_: int = mul v10_ v7_;
  v28_: int = add v27_ v9_;
  v29_: int = select v26_ v23_ v28_;
=======
  br v26_ .b27_ .b28_;
.b27_:
  c29_: bool = const true;
  v30_: int = div v7_ v8_;
<<<<<<< HEAD
  v31_: int = id v22_;
  v32_: bool = id c29_;
  v33_: int = id v30_;
  v34_: int = id v8_;
  v35_: int = id v9_;
  v36_: int = id v10_;
>>>>>>> f4e994eb (snapshots)
  v14_: int = id v22_;
  v15_: int = id v29_;
=======
  v31_: bool = id c29_;
  v32_: int = id v30_;
  v33_: int = id v8_;
  v34_: int = id v9_;
  v35_: int = id v10_;
  v14_: int = id v22_;
  v15_: int = id v32_;
>>>>>>> 0dff68b7 (snapshots)
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
  v19_: int = id v11_;
.b20_:
<<<<<<< HEAD
<<<<<<< HEAD
  v30_: bool = not v13_;
=======
  v37_: bool = not v13_;
>>>>>>> f4e994eb (snapshots)
=======
  v36_: bool = not v13_;
>>>>>>> 0dff68b7 (snapshots)
  v6_: int = id v14_;
  v7_: int = id v15_;
  v8_: int = id v16_;
  v9_: int = id v17_;
  v10_: int = id v18_;
  v11_: int = id v19_;
<<<<<<< HEAD
<<<<<<< HEAD
  br v30_ .b12_ .b31_;
.b31_:
=======
  br v37_ .b12_ .b38_;
=======
  br v36_ .b12_ .b37_;
>>>>>>> 0dff68b7 (snapshots)
.b28_:
  c38_: bool = const true;
  v39_: int = mul v10_ v7_;
  v40_: int = add v39_ v9_;
  v31_: bool = id c38_;
  v32_: int = id v40_;
  v33_: int = id v8_;
  v34_: int = id v9_;
  v35_: int = id v10_;
  v14_: int = id v22_;
  v15_: int = id v32_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
  v19_: int = id v11_;
  jmp .b20_;
<<<<<<< HEAD
.b38_:
>>>>>>> f4e994eb (snapshots)
=======
.b37_:
>>>>>>> 0dff68b7 (snapshots)
  print v6_;
  ret;
}
